--- a/index.html
+++ b/index.html
@@ -99,37 +99,45 @@
 				<h3>Pokemon Types</h3>
 				<div class="container type firstSix">
 					<!-- Normal -->
-					<a class="typeName" href="#" onclick="generateCard(`Normal`)">
+					<a
+						class="typeName"
+						href="#pokeCards"
+						onclick="generateCard(`Normal`)"
+					>
 						<img src="./images/type_icons/Normal.png" alt="Normal" />
 						<label for="">Normal</label>
 					</a>
 
 					<!-- Fire -->
-					<a class="typeName" href="#" onclick="generateCard(`Fire`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Fire`)">
 						<img src="./images/type_icons/Fire.png" alt="Fire" />
 						<label for="">Fire</label>
 					</a>
 
 					<!-- Water -->
-					<a class="typeName" href="#" onclick="generateCard(`Water`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Water`)">
 						<img src="./images/type_icons/Water.png" alt="Water" />
 						<label for="">Water</label>
 					</a>
 
 					<!-- Electric -->
-					<a class="typeName" href="#" onclick="generateCard(`Electric`)">
+					<a
+						class="typeName"
+						href="#pokeCards"
+						onclick="generateCard(`Electric`)"
+					>
 						<img src="./images/type_icons/Electric.png" alt="Electric" />
 						<label for="">Electric</label>
 					</a>
 
 					<!-- Grass -->
-					<a class="typeName" href="#" onclick="generateCard(`Grass`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Grass`)">
 						<img src="./images/type_icons/Grass.png" alt="Grass" />
 						<label for="">Grass</label>
 					</a>
 
 					<!-- Ice -->
-					<a class="typeName" href="#" onclick="generateCard(`Ice`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Ice`)">
 						<img src="./images/type_icons/Ice.png" alt="Ice" />
 						<label for="">Ice</label>
 					</a>
@@ -137,37 +145,57 @@
 
 				<div class="container type SecondSix">
 					<!-- Fighting -->
-					<a class="typeName" href="#" onclick="generateCard(`Fighting`)">
+					<a
+						class="typeName"
+						href="#pokeCards"
+						onclick="generateCard(`Fighting`)"
+					>
 						<img src="./images/type_icons/Fighting.png" alt="Fighting" />
 						<label for="">Fighting</label>
 					</a>
 
 					<!-- Poison -->
-					<a class="typeName" href="#" onclick="generateCard(`Poison`)">
+					<a
+						class="typeName"
+						href="#pokeCards"
+						onclick="generateCard(`Poison`)"
+					>
 						<img src="./images/type_icons/Poison.png" alt="Poison" />
 						<label for="">Poison</label>
 					</a>
 
 					<!-- Ground -->
-					<a class="typeName" href="#" onclick="generateCard(`Ground`)">
+					<a
+						class="typeName"
+						href="#pokeCards"
+						onclick="generateCard(`Ground`)"
+					>
 						<img src="./images/type_icons/Ground.png" alt="Ground" />
 						<label for="">Ground</label>
 					</a>
 
 					<!-- Flying -->
-					<a class="typeName" href="#" onclick="generateCard(`Flying`)">
+					<a
+						class="typeName"
+						href="#pokeCards"
+						onclick="generateCard(`Flying`)"
+					>
 						<img src="./images/type_icons/Flying.png" alt="Flying" />
 						<label for="">Flying</label>
 					</a>
 
 					<!-- Psychic -->
-					<a class="typeName" href="#" onclick="generateCard(`Psychic`)">
+					<a
+						class="typeName"
+						href="#pokeCards"
+						onclick="generateCard(`Psychic`)"
+					>
 						<img src="./images/type_icons/Psychic.png" alt="Psychic" />
 						<label for="">Psychic</label>
 					</a>
 
 					<!-- Bug -->
-					<a class="typeName" href="#" onclick="generateCard(`Bug`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Bug`)">
 						<img src="./images/type_icons/Bug.png" alt="Bug" />
 						<label for="">Bug</label>
 					</a>
@@ -175,37 +203,41 @@
 
 				<div class="container type ThirdSix">
 					<!-- Rock -->
-					<a class="typeName" href="#" onclick="generateCard(`Rock`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Rock`)">
 						<img src="./images/type_icons/Rock.png" alt="Rock" />
 						<label for="">Rock</label>
 					</a>
 
 					<!-- Ghost -->
-					<a class="typeName" href="#" onclick="generateCard(`Ghost`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Ghost`)">
 						<img src="./images/type_icons/Ghost.png" alt="Ghost" />
 						<label for="">Ghost</label>
 					</a>
 
 					<!-- Dragon -->
-					<a class="typeName" href="#" onclick="generateCard(`Dragon`)">
+					<a
+						class="typeName"
+						href="#pokeCards"
+						onclick="generateCard(`Dragon`)"
+					>
 						<img src="./images/type_icons/Dragon.png" alt="Dragon" />
 						<label for="">Dragon</label>
 					</a>
 
 					<!-- Dark -->
-					<a class="typeName" href="#" onclick="generateCard(`Dark`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Dark`)">
 						<img src="./images/type_icons/Dark.png" alt="Dark" />
 						<label for="">Dark</label>
 					</a>
 
 					<!-- Steel -->
-					<a class="typeName" href="#" onclick="generateCard(`Steel`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Steel`)">
 						<img src="./images/type_icons/Steel.png" alt="Steel" />
 						<label for="">Steel</label>
 					</a>
 
 					<!-- Fairy -->
-					<a class="typeName" href="#" onclick="generateCard(`Fairy`)">
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Fairy`)">
 						<img src="./images/type_icons/Fairy.png" alt="Fairy" />
 						<label for="">Fairy</label>
 					</a>
