--- a/index.html
+++ b/index.html
@@ -15,25 +15,15 @@
 			href="./images/icon/android-chrome-192x192.png"
 		/>
 
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="./images/icon/favicon-32x32.png"
-		/>
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/icon/favicon-32x32.png" />
+
+		<link rel="icon" type="image/png" sizes="96x96" href="./images/icon/favicon-96x96.png" />
+
+		<link rel="icon" type="image/png" sizes="16x16" href="./images/icon/favicon-16x16.png" />
 
 		<link
-			rel="icon"
-			type="image/png"
-			sizes="96x96"
-			href="./images/icon/favicon-96x96.png"
-		/>
-
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="./images/icon/favicon-16x16.png"
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
 	</head>
 	<body>
@@ -83,11 +73,7 @@
 						id="searchType"
 						placeholder="Search by pokemon name or type..."
 					/>
-					<a
-						class="btn mybtn"
-						href="#pokeCards"
-						onclick="generateCard(userInput.value)"
-					>
+					<a class="btn mybtn" href="#pokeCards" onclick="generateCard(userInput.value)">
 						Search
 					</a>
 					<!-- <button class="btn mybtn" onclick="generateCard()">Search</button> -->
@@ -99,11 +85,7 @@
 				<h3>Pokemon Types</h3>
 				<div class="container type firstSix">
 					<!-- Normal -->
-					<a
-						class="typeName"
-						href="#pokeCards"
-						onclick="generateCard(`Normal`)"
-					>
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Normal`)">
 						<img src="./images/type_icons/Normal.png" alt="Normal" />
 						<label for="">Normal</label>
 					</a>
@@ -121,11 +103,7 @@
 					</a>
 
 					<!-- Electric -->
-					<a
-						class="typeName"
-						href="#pokeCards"
-						onclick="generateCard(`Electric`)"
-					>
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Electric`)">
 						<img src="./images/type_icons/Electric.png" alt="Electric" />
 						<label for="">Electric</label>
 					</a>
@@ -145,51 +123,31 @@
 
 				<div class="container type SecondSix">
 					<!-- Fighting -->
-					<a
-						class="typeName"
-						href="#pokeCards"
-						onclick="generateCard(`Fighting`)"
-					>
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Fighting`)">
 						<img src="./images/type_icons/Fighting.png" alt="Fighting" />
 						<label for="">Fighting</label>
 					</a>
 
 					<!-- Poison -->
-					<a
-						class="typeName"
-						href="#pokeCards"
-						onclick="generateCard(`Poison`)"
-					>
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Poison`)">
 						<img src="./images/type_icons/Poison.png" alt="Poison" />
 						<label for="">Poison</label>
 					</a>
 
 					<!-- Ground -->
-					<a
-						class="typeName"
-						href="#pokeCards"
-						onclick="generateCard(`Ground`)"
-					>
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Ground`)">
 						<img src="./images/type_icons/Ground.png" alt="Ground" />
 						<label for="">Ground</label>
 					</a>
 
 					<!-- Flying -->
-					<a
-						class="typeName"
-						href="#pokeCards"
-						onclick="generateCard(`Flying`)"
-					>
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Flying`)">
 						<img src="./images/type_icons/Flying.png" alt="Flying" />
 						<label for="">Flying</label>
 					</a>
 
 					<!-- Psychic -->
-					<a
-						class="typeName"
-						href="#pokeCards"
-						onclick="generateCard(`Psychic`)"
-					>
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Psychic`)">
 						<img src="./images/type_icons/Psychic.png" alt="Psychic" />
 						<label for="">Psychic</label>
 					</a>
@@ -215,11 +173,7 @@
 					</a>
 
 					<!-- Dragon -->
-					<a
-						class="typeName"
-						href="#pokeCards"
-						onclick="generateCard(`Dragon`)"
-					>
+					<a class="typeName" href="#pokeCards" onclick="generateCard(`Dragon`)">
 						<img src="./images/type_icons/Dragon.png" alt="Dragon" />
 						<label for="">Dragon</label>
 					</a>
